[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Trivernis <trivernis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 1

[dependencies]
rayon = "1.3.0"
crossbeam-channel = "0.4.2"
benchlib-rs = "0.3.1"
crossbeam-utils = "0.7.2"
num_cpus = "1.0"
num-traits = "0.2.11"
may = "0.3.17"